# knowledge-agent

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  api_usage.json  config.py.example  py.typed  pyproject.toml  requirements.txt  scraper.py  scraping_stats.json
app/: api_tracker.py  config.py  container.py  history.py  logger.py  main.py  scraping_stats.py  state.py  styles.py  theme.py
app/components/: __init__.py  analytics_charts.py  api_card.py  gauges.py  shadcn_helpers.py  stat_cards.py
app/db/: __init__.py  models.py  session.py
app/pages/: analytics.py  dashboard.py  home.py  queue.py  results.py  settings.py
app/repositories/: __init__.py  interfaces.py  state_repo.py
app/services/: __init__.py  analytics_service.py  background_job_service.py  history_service.py  lint_service.py  notification_service.py  novel_service.py  queue_service.py  retry_service.py  scheduler_service.py  scraper_service.py  scraping_service.py  stats_service.py  trace_service.py
app/ui/: __init__.py
app/ui/components/: __init__.py  charts.py  header.py  metric_card.py
app/ui/pages/: __init__.py  add_links.py  analytics.py  dashboard.py  notifications.py  queue.py  results.py  scheduler.py  settings.py
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SETTINGS.md  TEST.md  TROUBLESHOOTING.md  UI.md
scraper/: __init__.py  bm25_ranker.py  method_optimizer.py  novel_scraper.py  router.py  runner.py
scraper/core/: __init__.py  captcha_detector.py  engine_registry.py  fallback_chain.py  metadata_extractor.py  page_extractor.py  session_manager.py  text_cleaner.py
scraper/engines/: __init__.py  _playwright_utils.py  base.py  base_engine.py  cloudscraper_engine.py  hybrid_engine.py  playwright_alt_engine.py  playwright_engine.py  playwright_tls_engine.py  simple_http_engine.py  webscrapingapi_engine.py
scraper/extractors/: text_extractor.py
sessions/: en_wikipedia_org_cookies.json  medium_com_cookies.json  wtr-lab_com_cookies.json
storage/: folder_manager.py  markdown_saver.py
tests/: __init__.py  conftest.py  test_engines.py  test_repositories.py  test_services.py
tests/integration/: test_services_integration.py
tests/performance/: test_concurrency.py
tests/unit/: test_captcha_detector.py  test_content_detector.py  test_content_hasher.py  test_engine_registry.py  test_fallback_chain.py  test_markdown_saver.py  test_metadata_extractor.py  test_method_optimizer.py  test_notification_service.py  test_page_extractor.py  test_router.py  test_scheduler_service.py  test_scraper_service.py  test_session_manager.py  test_state.py  test_text_cleaner.py  test_validators.py
utils/: content_detector.py  content_hasher.py  robots_checker.py  validators.py
