[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "knowledge-agent"
version = "0.0.3"
description = "Web scraping tool for building personal knowledge bases"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "KnowledgeAgent Team"}
]
keywords = ["scraping", "knowledge-base", "markdown", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "gradio>=4.0",
    "sqlmodel",
    "trafilatura>=2.0",
    "playwright",
    "playwright-stealth",
    "requests",
    "plotly>=5.18.0",
    "pandas>=2.0.0",
    "httpx>=0.27",
    "aiohttp>=3.9",
    "apscheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-mock>=3.12",
    "mypy>=1.8",
    "pyright>=1.1",
    "ruff>=0.3",
]

[project.scripts]
knowledge-agent = "app.main:main"

[tool.hatch.build.targets.wheel]
packages = ["app", "scraper", "storage", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
plugins = ["pydantic.mypy"]

# Strict for state and runner only
[[tool.mypy.overrides]]
module = "app.state"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "scraper.runner"
disallow_untyped_defs = true
disallow_incomplete_defs = true

# Relaxed for services (they have complex patterns)
[[tool.mypy.overrides]]
module = "app.services.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Ignore missing stubs for external libraries
[[tool.mypy.overrides]]
module = "playwright.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "gradio.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "requests.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "httpx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plyer.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cloudscraper.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rank_bm25.*"
ignore_missing_imports = true

# Allow less strict for other modules
[[tool.mypy.overrides]]
module = "utils.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scraper.engines.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scraper.bm25_ranker"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.logger"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.db.*"
disallow_untyped_defs = false

# Less strict for UI pages
[[tool.mypy.overrides]]
module = "app.ui.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.config"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.theme"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.components.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.pages.*"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["app", "scraper", "storage", "utils"]

[tool.coverage.run]
source = ["app", "scraper", "storage", "utils"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
